--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: rEstIreland
+Package: hamiltonRestIreland
 Title: Hamiltons's R estimates for Irish provinces
 Version: 0.0.0.9000
 Authors@R: person('AUTHOR_FIRST', 'AUTHOR_LAST', email = 'consultoria@rseis.com.br', role = c('cre', 'aut'))
@@ -7,7 +7,20 @@ License: MIT + file LICENSE
 Imports: 
     config,
     golem,
-    shiny
+    shiny,
+    magrittr,
+    R0,
+    bs4Dash,
+    dplyr,
+    ggplot2,
+    hamiltonThemes,
+    plotly,
+    shinyWidgets,
+    shinyjs
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
+Depends: 
+    R (>= 2.10)
+URL: https://github.com/curso-r/hamiltonRestIreland
+BugReports: https://github.com/curso-r/hamiltonRestIreland/issues
