--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,11 +13,11 @@ Imports:
     bs4Dash,
     dplyr,
     ggplot2,
-    hamiltonThemes,
     plotly,
     shinyWidgets,
     shinyjs,
-    pkgload
+    pkgload,
+    hamiltonThemes (>= 0.0.0.9000)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
@@ -25,3 +25,5 @@ Depends:
     R (>= 2.10)
 URL: https://github.com/curso-r/hamiltonRestIreland
 BugReports: https://github.com/curso-r/hamiltonRestIreland/issues
+Remotes:  
+    hamilton-institute/hamiltonThemes
