--- a/.github/workflows/updateData.yml
+++ b/.github/workflows/updateData.yml
@@ -26,7 +26,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install libgit2-dev 
-      - uses: r-lib/actions/setup-r@master
+      - uses: r-lib/actions/setup-r@v1
+        with:
+          r-version: '4.0.3'
       - name: Install packages
         run: |
           Rscript -e 'install.packages("gert")'
